feat: tags importantes(algumas

--- a/index.html
+++ b/index.html
@@ -1,19 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="meu primeiro site!" />
+    <meta name="keywords" content="programacao, html, css, javascript"/>
+    <meta name="author" content="Caio Eduardo Gomes Carvalho" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!--Strong = para dar enfase e o nevagedor entender que é importante.
+    /b = só escurece mesmo
+    A estetica é a mesma
+    -->
     <h1>Treinamento do caio</h1>
-    <p>Lorem <br> ipsum dolor sit amet, consectetur adipiscing elit,
-       sed do eiusmod tmpor incididunt ut labore et dolore magna aliqua.
-       Ut enim ad minim veniam, quis nostrud exercitation
-       ullamco laboris nisi ut aliquip ex ea commodo consequat.
-       Duis aute irure dolor in reprehenderit in voluptate velit
-       esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-       occaecat cupidatat non proident, 
-       sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-</body>
+    <p>Vou <Strong>aprender</Strong> o básico do <b>HTML</b></p>
+
+    Caio Eduardo Gomes Carvalho<br>
+    <Small>cayoeduardo7@hotmail.com</Small>
+
+    <p>Neste curso vou aprender o básico do HTML com aulas do youtube e vem ser dbc</p>
+
+    <p>De <del>590</del> por 780</p>
+
+    <!--
+    <hr> = cria uma linha
+    /<br> = pula linha
+    <i> = deixa em italico
+    <u> = underline, fica sublinhado
+    <small> = deixa a fonte menor
+    <del>  = deixa riscado
+    <sup> = Superior (ex: numero exponencial)
+    <sub> = inferior(deixa mais abaixo)
+    -->
+    <hr>
+    <h2>Aprendendo frontend</h2>
+    <p><u>Lorem ipsum dolor sit amet, consectetur adipisicing elit</u>. Esse rerum dicta corrupti, assumenda nobis earum, porro rem perferendis nostrum labore explicabo illo, <br>consequuntur vel natus quae voluptates maxime illum harum.</p>
+    <h3>Começando com html</h3>
+    <h4> Meta Tags</h4>
+    <h5>Cabeçalho</h5>
+    <h6>Parágrafo</h6>
+    
+  </body>
 </html>
