--- a/index.html
+++ b/index.html
@@ -9,37 +9,17 @@
     <title>Document</title>
   </head>
   <body>
-    <!--Strong = para dar enfase e o nevagedor entender que é importante.
-    /b = só escurece mesmo
-    A estetica é a mesma
-    -->
-    <h1>Treinamento do caio</h1>
-    <p>Vou <Strong>aprender</Strong> o básico do <b>HTML</b></p>
-
-    Caio Eduardo Gomes Carvalho<br>
-    <Small>cayoeduardo7@hotmail.com</Small>
-
-    <p>Neste curso vou aprender o básico do HTML com aulas do youtube e vem ser dbc</p>
-
-    <p>De <del>590</del> por 780</p>
-
-    <!--
-    <hr> = cria uma linha
-    /<br> = pula linha
-    <i> = deixa em italico
-    <u> = underline, fica sublinhado
-    <small> = deixa a fonte menor
-    <del>  = deixa riscado
-    <sup> = Superior (ex: numero exponencial)
-    <sub> = inferior(deixa mais abaixo)
-    -->
+   
+    <h1>Página principal</h1>
+    <p>Vamos aprender links</p>
     <hr>
-    <h2>Aprendendo frontend</h2>
-    <p><u>Lorem ipsum dolor sit amet, consectetur adipisicing elit</u>. Esse rerum dicta corrupti, assumenda nobis earum, porro rem perferendis nostrum labore explicabo illo, <br>consequuntur vel natus quae voluptates maxime illum harum.</p>
-    <h3>Começando com html</h3>
-    <h4> Meta Tags</h4>
-    <h5>Cabeçalho</h5>
-    <h6>Parágrafo</h6>
-    
+    <a href="https://google.com.br" target="_blank"> Ir para o google</a> <br><br>
+
+    <!-- LINK RELATIVO (URL RELATIVA)-->
+    <a href="sobre.html"> Sobre nós</a> <br><br>
+
+    <a href="equipe/caio.html" target="_blank">Caio</a>
+
+    <hr>
   </body>
 </html>
