feat: treinamento html formularios

--- a/index.html
+++ b/index.html
@@ -10,10 +10,75 @@
   </head>
   <body>
    
-    <h1>Página principal</h1>
-    <p>Vamos aprender links</p>
+    <h1> <a href="https://www.google.com" target="_blank"> <img src="img/icons/estrela.png" alt="Estrela amarela icone" width="30"></a> Página principal</h1>
+    
+      <p>Vamos aprender links</p>
     <hr>
     <a href="https://google.com.br" target="_blank"> Ir para o google</a> <br><br>
+    <hr>
+    <h2>Tabelas</h2>
+    <table width="50%" border="1" style="text-align: center;">
+      <tr>
+        <th>Nome</th>
+        <th>Idade</th>
+        <th>Peso</th>
+      </tr>
+      <tr>
+        <td>Caio</td>
+        <td>25</td>
+        <td>100</td>
+      </tr>
+
+      <tr>
+        <td>Gabriel</td>
+        <td>23</td>
+        <td>150</td>
+      </tr>
+    </table>
+
+    <hr>
+    <table width="50%" border="1" style="text-align: center;">
+
+      <tr>
+          <th> Nome </th>
+          <th> Idade </th>
+          <th> Pé </th>
+      </tr>
+
+      <tr>
+          <td>Rafael</td>
+          <td>25</td>
+          <td>Destro</td>
+      </tr>
+
+      <tr>
+          <td>André</td>
+          <td>45</td>
+          <td>Canhoto</td>
+      </tr>
+    </table>
+    <hr>
+    <h2>Lista não ordenada</h2>
+    <ul>
+    <li> Comer </li>
+    <li> Dançar </li>
+    <li> Dormir </li>
+
+    </ul>
+    <hr>
+
+    <h2>Lista ordenada</h2>
+    <ol>
+    <li> Comer </li>
+    <li> Dançar </li>
+    <li> Dormir </li>
+
+    </ol>
+
+    <hr>
+
+    <a href="/formulario.html" target="_blank"> Ir para o formulario</a>
+    <hr>
 
     <!-- LINK RELATIVO (URL RELATIVA)-->
     <a href="sobre.html"> Sobre nós</a> <br><br>
@@ -21,5 +86,14 @@
     <a href="equipe/caio.html" target="_blank">Caio</a>
 
     <hr>
+
+    <img src="https://www.remaza.com.br/uploads/bc51be65-9c0a-415c-92bf-d41442c9bed7/fiat-strada-marcas-de-carros-remaza.png"
+     alt="Carro com direitos autorais" width="300">
+
+    <hr>
+      <img src="img/automoveis/carro.jpg" alt="Carro sem direitos autorais" width="300">
+    <hr>
+
+    <img src="https://th.bing.com/th/id/R.587b67e93611fd6b326337a1368689af?rik=7qOwhC91zIritA&pid=ImgRaw&r=0" alt="Urso se abraçando">
   </body>
 </html>
