feat: HTML SEMANTICO

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     
       <p>Vamos aprender links</p>
     <hr>
-    <a href="https://google.com.br" target="_blank"> Ir para o google</a> <br><br>
+    <a href="https://google.com.br" target="_blank"> Ir para o google</a> 
+    <a href="semantico.html" target="_blank">Html Semântico</a>
+    <a href="/formulario.html" target="_blank"> Ir para o formulario</a>
+    <!-- LINK RELATIVO (URL RELATIVA)-->
+    <a href="sobre.html"> Sobre nós</a> <br><br>
+    <a href="equipe/caio.html" target="_blank">Caio</a>
     <hr>
+
     <h2>Tabelas</h2>
     <table width="50%" border="1" style="text-align: center;">
       <tr>
@@ -76,14 +82,6 @@
     </ol>
 
     <hr>
-
-    <a href="/formulario.html" target="_blank"> Ir para o formulario</a>
-    <hr>
-
-    <!-- LINK RELATIVO (URL RELATIVA)-->
-    <a href="sobre.html"> Sobre nós</a> <br><br>
-
-    <a href="equipe/caio.html" target="_blank">Caio</a>
 
     <hr>
 
