feat: css interno

--- a/css/index.html
+++ b/css/index.html
@@ -7,8 +7,21 @@
 
 <!-- CSS INLINE É QUANDO O CSS FICA DENTRO DA PROPRIA CLASSE -->
 </head>
-<body style="background-color: yellow;">
-    <h1 style="color: blue; font-size: 88px;">MEU PRIMEIRO CSS</h1>
-    <h1>Outro componente</h1>
+<body >
+
+    <style>
+        body{
+            background-color: yellow;
+        }
+
+        h1{
+            color: blue;
+            font-size: 88px;
+
+        }
+
+    </style>
+    <h1>MEU PRIMEIRO CSS</h1>
+    <h1 style="color: brown">Outro componente</h1>
 </body>
 </html>
