feat: css externo

--- a/css/index.html
+++ b/css/index.html
@@ -6,22 +6,14 @@
     <title>Document</title>
 
 <!-- CSS INLINE É QUANDO O CSS FICA DENTRO DA PROPRIA CLASSE -->
+
+<link rel="stylesheet" href="css/estyle.css">
 </head>
 <body >
 
-    <style>
-        body{
-            background-color: yellow;
-        }
-
-        h1{
-            color: blue;
-            font-size: 88px;
-
-        }
-
-    </style>
     <h1>MEU PRIMEIRO CSS</h1>
     <h1 style="color: brown">Outro componente</h1>
+    <a href="outro.html">Outra pagina</a>
+
 </body>
 </html>
