feat: seletores e classes

--- a/css/outro.html
+++ b/css/outro.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/estyle.css">
 </head>
 <body>
-    <h1>Ola</h1>
+    <h1>Outra pagina css</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum doloribus praesentium libero, alias vero recusandae inventore ut corporis sapiente fuga asperiores voluptatum quos, numquam distinctio qui, laudantium quisquam rem magnam.</p>
     <a href="index.html">Voltar</a>
 </body>
 </html>
