--- a/css/outro.html
+++ b/css/outro.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Outra pagina css</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum doloribus praesentium libero, alias vero recusandae inventore ut corporis sapiente fuga asperiores voluptatum quos, numquam distinctio qui, laudantium quisquam rem magnam.</p>
+    
+
+    <div class="teste">
+        essa frase terá 300px de altura e 300px de largura
+    </div>
+
     <a href="index.html">Voltar</a>
 </body>
 </html>
