feat: propriedade float

--- a/css/index.html
+++ b/css/index.html
@@ -24,6 +24,7 @@
 </div>
 
 <a class="botao" href="outro.html" target="_blank"> CLIQUE AQUI PARA IR PARA OUTRO SITE</a>
+<a class="botao" href="text.html" target="_blank"> CLIQUE AQUI PARA IR PARA O SITE DE TEXTO</a>
 
 </body>
 </html>
