--- a/css/pagina.html
+++ b/css/pagina.html
@@ -8,18 +8,29 @@
   </head>
   <body>
 
+    <h1 class="titulo">Inicio da página</h1>
+
     <div>
 
         <ul>
             <li><a href="#">Menu</a></li>
             <li><a href="#">Menu</a></li>
             <li><a href="#">Menu</a></li>
+            <li><a href="#">Menu</a></li>
+            <li class="dropdown">
+              <a class="dropbtn" href="#">Menu</a>
+              <div class="dropdown-content">
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+              </div>
+            </li>
+
             <li class="login"><a  href="#">Login</a></li>
         </ul>
     
 
     <div>
-      <h1 class="titulo">Inicio da página</h1>
       <p class="paragrafo">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius autem
         eaque inventore nemo quo quis itaque impedit culpa quibusdam iure,
@@ -48,6 +59,14 @@
         architecto autem libero rerum voluptates deserunt. Neque explicabo,
         aliquam velit quae esse tenetur.
       </p>
+    </div>
+
+    <div class="div-das-imagens">
+      <img class="img1" src="https://picsum.photos/200" alt="Lorem ipsun">
+      <img class="img1" src="https://picsum.photos/200" alt="Lorem ipsun">
+      <img class="img1" src="https://picsum.photos/200" alt="Lorem ipsun">
+        <br> <br>
+      <a class="botao" href="#">Ver noticias</a>
     </div>
   </body>
 </html>
