feat: query, box shadow, text etc

--- a/css/pagina.html
+++ b/css/pagina.html
@@ -29,7 +29,7 @@
             <li class="login"><a  href="#">Login</a></li>
         </ul>
     
-
+ <h1 class="multipla">Noticia importante</h1>
     <div>
       <p class="paragrafo">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius autem
@@ -61,12 +61,21 @@
       </p>
     </div>
 
+
+<h1 class="branco">Noticias abaixo:</h1>
     <div class="div-das-imagens">
       <img class="img1" src="https://picsum.photos/200" alt="Lorem ipsun">
       <img class="img1" src="https://picsum.photos/200" alt="Lorem ipsun">
       <img class="img1" src="https://picsum.photos/200" alt="Lorem ipsun">
         <br> <br>
       <a class="botao" href="#">Ver noticias</a>
+    </div>
+
+
+    <div class="caixa">
+      <img src="./img/cidade.jpg" style="max-width: 100%">
+      <h2 class="reduzido">Isso é um texto beeeeeeem grande</h2>
+        <p class="reduzido">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum quod vel quasi non a mollitia fugit deleniti, accusantium fuga doloremque facere ab repellat? Magnam ratione error fugit culpa expedita omnis?</p>
     </div>
   </body>
 </html>
